[project]
name = "waypoint"
version = "0.1.0"
description = "Workflow orchestration library."
readme = "README.md"
authors = [{ name = "Charles Swartz", email = "charles.w.swartz.vi@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "cloudpickle>=3.1.1",
    "pluggy>=1.6.0",
    "pydantic>=2.11.7",
    "typing-extensions",  # Until Python 3.12 is minimum
]

[project.optional-dependencies]
logging = [
    "rich>=14.0.0",
]
fsspec = [
    "fsspec>=2024.6.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy",
    "pre-commit>=4.3.0",
    "pre-commit-uv>=4.1.5",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pyrefly",
    "ruff",
    "nox>=2025.5.1",
]
